# react-native-rust-test

./: .gitignore  App.js  app.json  package.json
android/: settings.gradle
android/app/: BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/react_native_rust_test/: MainActivity.java  MainApplication.java  MainApplicationBridge.java  MainApplicationPackage.java
android/app/src/main/res/values/: strings.xml
ios/react_native_rust_test/: AppDelegate.m  Info.plist
ios/react_native_rust_test.xcodeproj/: project.pbxproj
ios/react_native_rust_test.xcodeproj/xcshareddata/xcschemes/: react_native_rust_test-tvOS.xcscheme  react_native_rust_test.xcscheme
ios/react_native_rust_test/Base.lproj/: LaunchScreen.xib
ios/react_native_rust_testTests/: react_native_rust_testTests.m
react_native_rust_test/: Cargo.toml
rust/: copy_android.sh
rust/.cargo/: config
rust/src/: lib.rs  string.rs
